--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,55 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Prefix</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>Title</th>
-      <th>Company</th>
-      <th>Address</th>
-      <th>Biography</th>
-      <th>Profession</th>
-      <th>Helping</th>
-      <th>Under 18?</th>
-      <th>In danger?</th>
-      <th>In contact ice 24 hours?</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.prefix %></td>
-        <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= user.title %></td>
-        <td><%= user.company %></td>
-        <td><%= user.address %></td>
-        <td><%= user.biography %></td>
-        <td><%= user.profession %></td>
-        <td><%= user.helping %></td>
-        <td><%= user.under_18? %></td>
-        <td><%= user.in_danger? %></td>
-        <td><%= user.in_contact_ICE_24_hours? %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+<div class="container">
+<%= render "clientformurgent", user: @user %>
+<%= render "helperform", user: @user %>
+<%= render "clientformgen", user: @user %>
+</div>
