added toggle for forms on homepage

--- a/app/views/users/_clientformgen.html.erb
+++ b/app/views/users/_clientformgen.html.erb
@@ -1,4 +1,4 @@
-<div class="container gen">
+<div class="container info gen">
 <%= form_for(user) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
