--- a/app/views/users/_clientformurgent.html.erb
+++ b/app/views/users/_clientformurgent.html.erb
@@ -1,51 +1,51 @@
-<div class="container urgent">
-<%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="container info urgent">
+  <%= form_for(user) do |f| %>
+    <% if user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :username %>
+      <%= f.text_field :username, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, class: "form-control" %>
+    </div>
+
+    <!-- ToDo - Figure out address checker -->
+
+    <div class="form-group">
+      <%= f.label :under_18?, "Are you under 18?" %>
+      <%= f.check_box :under_18? %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :in_danger?, "Are you in danger?" %>
+      <%= f.check_box :in_danger? %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :in_contact_ICE_24_hours?, "Were you in contact with ICE in the last 24 hours?" %>
+      <%= f.check_box :in_contact_ICE_24_hours? %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Submit", class: "btn btn-default" %>
     </div>
   <% end %>
-
-  <div class="form-group">
-    <%= f.label :username %>
-    <%= f.text_field :username, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.text_field :email, class: "form-control" %>
-  </div>
-
-  <!-- ToDo - Figure out address checker -->
-
-  <div class="form-group">
-    <%= f.label :under_18?, "Are you under 18?" %>
-    <%= f.check_box :under_18? %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :in_danger?, "Are you in danger?" %>
-    <%= f.check_box :in_danger? %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :in_contact_ICE_24_hours?, "Were you in contact with ICE in the last 24 hours?" %>
-    <%= f.check_box :in_contact_ICE_24_hours? %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Submit", class: "btn btn-default" %>
-  </div>
-<% end %>
 </div>
