--- a/app/views/users/_helperform.html.erb
+++ b/app/views/users/_helperform.html.erb
@@ -1,4 +1,4 @@
-<div class="container helper">
+<div class="container info helper">
 <%= form_for(user) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
