--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-  <div class="btn btn-default seeking">Seeking Help</div>
-  <div class="btn btn-default giving">Giving Help</div>
+  <div class="btn btn-default first seeking">Seeking Help</div>
+  <div class="btn btn-default first giving">Giving Help</div>
   <%= render "clientformurgent", user: @user %>
   <%= render "helperform", user: @user %>
   <%= render "clientformgen", user: @user %>
+  <%= render "expertises", expertises: @expertises %>
 </div>
