comment out partial

--- a/app/views/users/_clientformurgent.html.erb
+++ b/app/views/users/_clientformurgent.html.erb
@@ -35,13 +35,13 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :in_danger?, "Are you in danger?" %>
-      <%= f.check_box :in_danger? %>
+      <%= f.label :danger?, "Are you in danger?" %>
+      <%= f.check_box :danger? %>
     </div>
 
     <div class="form-group">
-      <%= f.label :in_contact_ICE_24_hours?, "Were you in contact with ICE in the last 24 hours?" %>
-      <%= f.check_box :in_contact_ICE_24_hours? %>
+      <%= f.label :contact_ice_24_hours?, "Were you in contact with ICE in the last 24 hours?" %>
+      <%= f.check_box :contact_ice_24_hours? %>
     </div>
 
     <div class="actions">
