--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,5 +4,5 @@
   <%= render "clientformurgent", user: @user %>
   <%= render "helperform", user: @user %>
   <%= render "clientformgen", user: @user %>
-  <%= render "expertises", expertises: @expertises %>
+<!-- <%#= render "expertises", expertises: @expertises %> -->
 </div>
