--- a/app/views/users/_clientformgen.html.erb
+++ b/app/views/users/_clientformgen.html.erb
@@ -68,13 +68,13 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :in_danger? %>
-    <%= f.check_box :in_danger? %>
+    <%= f.label :danger? %>
+    <%= f.check_box :danger? %>
   </div>
 
   <div class="form-group">
-    <%= f.label :in_contact_ICE_24_hours? %>
-    <%= f.check_box :in_contact_ICE_24_hours? %>
+    <%= f.label :contact_ice_24_hours? %>
+    <%= f.check_box :contact_ice_24_hours? %>
   </div>
 
   <div class="actions">
