--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,70 +1,48 @@
-<p id="notice"><%= notice %></p>
+<% if @user.helping %>
 
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
+  <div class="container">
+    <p id="notice"><%= notice %></p>
+    <div class="col-md-4">
+      <h3> <strong><%= @user.prefix %> <%= @user.first_name %> <%= @user.last_name %></h3>
+      <p><strong>Email: </strong><%= @user.email %></p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Title:</strong><%= @user.title %></p>
+      <p><strong>Company:</strong><%= @user.company %></p>
+      <p><strong>Address:</strong><%= @user.address %></p>
+      <p><strong>Biography:</strong><%= @user.biography %></p>
+    </div>
+  </div>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+<% else %>
+  <div class="container">
+    <p id="notice"><%= notice %></p>
+    <div class="col-md-4">
+      <h3> <strong><%= @user.prefix %> <%= @user.first_name %> <%= @user.last_name %></h3>
+      <p><strong>Email: </strong><%= @user.email %></p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Under 18?</strong>
+        <% if @user.danger? %>
+          Yes
+        <% else %>
+          No
+        <% end %>
+      </p>
+      <p><strong>In danger?</strong>
+        <% if @user.danger? %>
+          Yes
+        <% else %>
+          No
+        <% end %>
+      </p>
+      <p><strong>Has Been In Contact with ICE within 24 hours?</strong>
+        <% if @user.contact_ice_24_hours? %>
+          Yes
+        <% else %>
+          No
+        <% end %>
+    </div>
+  </div>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
-
-<p>
-  <strong>Prefix:</strong>
-  <%= @user.prefix %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @user.title %>
-</p>
-
-<p>
-  <strong>Company:</strong>
-  <%= @user.company %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @user.address %>
-</p>
-
-<p>
-  <strong>Biography:</strong>
-  <%= @user.biography %>
-</p>
-
-
-<p>
-  <strong>Helping:</strong>
-  <%= @user.helping %>
-</p>
-
-<p>
-  <strong>Under 18?:</strong>
-  <%= @user.under_18? %>
-</p>
-
-<p>
-  <strong>In danger?:</strong>
-  <%= @user.danger? %>
-</p>
-
-<p>
-  <strong>In contact ice 24 hours?:</strong>
-  <%= @user.contact_ice_24_hours? %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<% end %>
