--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="btn btn-default first seeking">Seeking Help</div>
-  <div class="btn btn-default first giving">Giving Help</div>
+<div class="container" id="box">
+  <!-- <div class="btn btn-default first seeking">Seeking Help</div>
+  <div class="btn btn-default first giving">Giving Help</div> -->
   <%= render "clientformurgent", user: @user %>
   <%= render "helperform", user: @user %>
   <%= render "clientformgen", user: @user %>
