fixed forms for homepage

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -19,6 +19,10 @@
       max-height:150px;
   }
 
+  label {
+    text-align: center;
+  }
+
   .navbar li {
       list-style: none;
       padding-right: 2rem;
