--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -363,6 +363,10 @@ border-radius: 0;}
     width: 60%;
   }
 
+  label {
+    text-align: center;
+  }
+
 }
 </style>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -395,27 +399,9 @@ border-radius: 0;}
 
   <div class=" container col-md-12 full-width">
     <div class="jumbotron">
-      <div class="inner-content text-center col-md-12 col-sm-12">
-
-        <div class="member-content">
-          <div class="member-request col-sm-12 first seeking">
-            <div class="btn btn-request">I need help</div>
-          </div>
-
-          <div class="member-help  col-sm-12 first giving">
-            <div class="btn btn-help">I can help</div>
-          </div>    
-        </div><!-- member-content-->
-
-
-      </div>
-    </div>
-
       <%= yield %>
-<footer id="footer">
-
-</footer>
-</div><!-- container-->
+    </div>
+  </div><!-- container-->
     
   </body>
 </html>
